tests/invalid/integer_literal_overflow.ar
// errc: 11
fn main()
{
    let a: u8 = 256;
    let b: u16 = 65536;
    let c: u32 = 4294967296;
    let d: u64 = 18446744073709551616;
    let e: usize = 18446744073709551616;
    let f: i8 = 128;
    let g: i16 = 32768;
    let h: i32 = 2147483648;
    let i: i64 = 9223372036854775808;
    let j: isize = 9223372036854775808;
    let k = 2147483648;
}
